--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "firebase": "^8.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
-    "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "@types/eslint": "^6.8.1",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.1.5",
+    "@types/react-router-dom": "^5.1.6",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
