--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npm run lint:es && npm run lint:style",
-    "lint:fix": "npm run lint:es:fix && npm run lint:style:fix",
+    "lint": "yarn lint:es && yarn lint:style",
+    "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
     "lint:es": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:es:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "lint:style": "stylelint src/**/*.css",
     "lint:style:fix": "stylelint --fix src/**/*.css",
-    "lint:conflict": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "lint:conflict": "eslint-config-prettier .eslintrc.js",
     "postinstall": "typesync"
   },
   "eslintConfig": {
@@ -76,8 +76,7 @@
     "stylelint": "^13.8.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
-    "typesync": "^0.8.0"
+    "stylelint-order": "^4.1.0"
   },
   "husky": {
     "hooks": {
