--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+.firebaserc
 
 # misc
 .DS_Store
@@ -18,10 +19,7 @@
 .env.test.local
 .env.production.local
 
+debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-/.firebase
-/firestore.indexes.json
-/firestore.rules
