--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.1.5",
     "@types/react-redux": "^7.1.14",
-    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.7",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
@@ -82,7 +81,8 @@
     "stylelint": "^13.8.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "typesync": "^0.8.0"
   },
   "husky": {
     "hooks": {
