--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,15 @@
 # misc
 .DS_Store
 .env.local
-.env.development
+.env.development.local
 .env.test.local
 .env.production.local
 
-debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.firebase
+.firebaserc
+
+.eslintcache
