--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "dotenv -e .env.local react-scripts start",
-    "build": "dotenv -e .env.development react-scripts build",
+    "build-dev": "dotenv -e .env.development.local react-scripts build",
+    "build-test": "dotenv -e .env.test.local react-scripts build",
+    "build-prod": "dotenv -e .env.production.local react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "yarn lint:es && yarn lint:style",
