setup develop firebase and add serve scripts

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "build-dev": "dotenv -e .env.development.local react-scripts build",
     "build-test": "dotenv -e .env.test.local react-scripts build",
     "build-prod": "dotenv -e .env.production.local react-scripts build",
+    "serve-dev": "yarn build-dev && serve -s build",
+    "serve-test": "yarn build-test && serve -s build",
+    "serve-prod": "yarn build-prod && serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "yarn lint:es && yarn lint:style",
