--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4",
-    "yarn": "^1.22.10"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "dotenv -e .env.local react-scripts start",
