Add Firebase token

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,6 +13,7 @@ env:
   FIREBASE_MESSAGING_SENDER_ID: ${{secrets.DEV_FIREBASE_MESSAGING_SENDER_ID}}
   FIREBASE_APP_ID: ${{secrets.DEV_FIREBASE_APP_ID}}
   FIREBASE_MEASUREMENT: ${{secrets.DEV_FIREBASE_MEASUREMENT}}
+  FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
 
 jobs:
   build:
