--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
   },
   "scripts": {
     "start": "dotenv -e .env.local react-scripts start",
-    "build": "dotenv -e .env.local react-scripts build",
-    "build-dev": "dotenv -e .env.development.local react-scripts build",
-    "build-prod": "dotenv -e .env.production.local react-scripts build",
+    "build-dev": "dotenv -e .env.development react-scripts build",
+    "build-prod": "dotenv -e .env.production react-scripts build",
     "serve-dev": "yarn build-dev && serve -s build",
     "serve-prod": "yarn build-prod && serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "yarn lint:es && yarn lint:style",
-    "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
+    "lint": "yarn lint:es",
+    "lint:fix": "yarn lint:es:fix",
     "lint:es": "eslint src/**/*.{js,jsx,ts,tsx}",
     "lint:es:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "lint:style": "stylelint src/**/*.css",
