--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,4 +60,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ secrets.TEST_FIREBASE_PROJECT_ID }}s
+          PROJECT_ID: ${{ secrets.TEST_FIREBASE_PROJECT_ID }}
