--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "scripts": {
     "start": "dotenv -e .env.local react-scripts start",
+    "build": "dotenv -e .env.local react-scripts build",
     "build-dev": "dotenv -e .env.development react-scripts build",
+    "build-test": "dotenv -e .env.test react-scripts build",
     "build-prod": "dotenv -e .env.production react-scripts build",
     "serve-dev": "yarn build-dev && serve -s build",
+    "serve-test": "yarn build-test && serve -s build",
     "serve-prod": "yarn build-prod && serve -s build",
     "test": "dotenv -e .env.local react-scripts test",
     "eject": "react-scripts eject",
