--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,18 @@
-name: develop
+name: test
 
 on:
   push:
     branches:
-      - develop
+      - test
 
 env:
-  FIREBASE_API_KEY: ${{ secrets.DEV_FIREBASE_API_KEY }}
-  FIREBASE_AUTH_DOMAIN: ${{ secrets.DEV_FIREBASE_AUTH_DOMAIN }}
-  FIREBASE_PROJECT_ID: ${{ secrets.DEV_FIREBASE_PROJECT_ID }}
-  FIREBASE_STORAGE_BUCKET: ${{ secrets.DEV_FIREBASE_STORAGE_BUCKET }}
-  FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.DEV_FIREBASE_MESSAGING_SENDER_ID }}
-  FIREBASE_APP_ID: ${{ secrets.DEV_FIREBASE_APP_ID }}
-  FIREBASE_MEASUREMENT: ${{ secrets.DEV_FIREBASE_MEASUREMENT }}
+  FIREBASE_API_KEY: ${{ secrets.TEST_FIREBASE_API_KEY }}
+  FIREBASE_AUTH_DOMAIN: ${{ secrets.TEST_FIREBASE_AUTH_DOMAIN }}
+  FIREBASE_PROJECT_ID: ${{ secrets.TEST_FIREBASE_PROJECT_ID }}
+  FIREBASE_STORAGE_BUCKET: ${{ secrets.TEST_FIREBASE_STORAGE_BUCKET }}
+  FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.TEST_FIREBASE_MESSAGING_SENDER_ID }}
+  FIREBASE_APP_ID: ${{ secrets.TEST_FIREBASE_APP_ID }}
+  FIREBASE_MEASUREMENT: ${{ secrets.TEST_FIREBASE_MEASUREMENT }}
 
 jobs:
   build:
@@ -24,18 +24,18 @@ jobs:
       - name: Generate .env
         working-directory: scripts
         env:
-          ENV_NAME: .env.development
+          ENV_NAME: .env.test
         run: |
           chmod +x ./env.sh
           ./env.sh
-          mv .env.development ../.env.development
+          mv .env.test ../.env.test
           cd .. && ls -la
       - name: Install Dependencies
         run: yarn install
       - name: Lint
         run: yarn lint:fix
       - name: Build
-        run: yarn build-dev
+        run: yarn build-test
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
@@ -60,4 +60,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: ${{ secrets.DEV_FIREBASE_PROJECT_ID }}
+          PROJECT_ID: ${{ secrets.TEST_FIREBASE_PROJECT_ID }}
