setup TaskBoard and firebase utils mock

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "serve-dev": "yarn build-dev && serve -s build",
     "serve-test": "yarn build-test && serve -s build",
     "serve-prod": "yarn build-prod && serve -s build",
-    "test": "dotenv -e .env.local react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "yarn lint:es",
     "lint:fix": "yarn lint:es:fix",
@@ -65,7 +65,6 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.14",
-    "@types/react-test-renderer": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
