--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.0",
     "react": "^17.0.1",
@@ -15,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
@@ -65,6 +67,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.14",
+    "@types/react-test-renderer": "^17.0.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.7",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.5",
@@ -83,6 +87,7 @@
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.1",
     "stylelint": "^13.8.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
