--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,16 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:4.8.2
+      - image: alpine:3.7
     steps:
       - checkout
-      - run: echo "hello world"
+      - run:
+          name: 最初のステップ
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
+      - run:
+          name: コードの取得
+          command: |
+            ls -al
+            echo '^^^That should look familiar^^^'
