--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,7 @@ jobs:
           command: |
             ls -al
             echo '^^^That should look familiar^^^'
+      - run:
+          name: 独自コンテナでの実行
+          command: |
+            node -v
